workloads/iperf/load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iperf-load-balancer-service
  namespace: media
  annotations:
    metallb.universe.tf/allow-shared-ip: k3os
spec:
  type: LoadBalancer
  ports:
  - port: 5201
    targetPort: 5201
    name: iperf
  selector:
    app: iperf
  loadBalancerIP: 172.16.20.17
